@@ -66,32 +66,32 @@ class ElfHeader {
       e_shentsize = readUHalf (f);
       e_shnum = readUHalf (f);
       e_shstrndx = readUHalf (f);
-    }
-
-  
-    public void printHeader()
-    {
-         
-         System.out.println("e_magic 0x" + Long.toHexString(e_magic & 0xFFFFFFFFL).toUpperCase());
-         System.out.println("e_class " +  Integer.toHexString(e_class & 0xFF ));
-         System.out.println("e_data " + Integer.toHexString(e_data & 0xFF ));
-         System.out.println("e_idver " + Integer.toHexString(e_idver & 0xFF));
-         System.out.println("e_type " + Integer.toHexString(e_type & 0xFFFF));
-         System.out.println("e_machine " + Integer.toHexString(e_machine & 0xFFFF));
-         System.out.println("e_version " + Long.toHexString(e_version & 0xFFFFFFFFL));
-         System.out.println("e_entry " + Long.toHexString(e_entry & 0xFFFFFFFFL));
-         System.out.println("e_phoff "+ Long.toHexString(e_phoff & 0xFFFFFFFFL));
-         System.out.println("e_shoff "+ Long.toHexString(e_shoff  & 0xFFFFFFFFL));
-         System.out.println("e_flags "+ Long.toHexString(e_flags & 0xFFFFFFFFL));
-         System.out.println("e_ehsize "+ Integer.toHexString(e_ehsize& 0xFFFF));
-         System.out.println("e_phentsize " + Integer.toHexString(e_phentsize& 0xFFFF));
-         System.out.println("e_phnum " + Integer.toHexString(e_phnum& 0xFFFF));
-         System.out.println("e_shentsize " + Integer.toHexString(e_shentsize& 0xFFFF));
-         System.out.println("e_shnum " + Integer.toHexString(e_shnum& 0xFFFF));
-         System.out.println("e_shstrndx "+ Integer.toHexString(e_shstrndx& 0xFFFF));
-	
-    }
+    }   
+     public String toString() 
+     {
+       StringBuffer str = new StringBuffer();
+       str.append("-----ELF HEADER---------" + "\n");
+       str.append("e_magic " + "\t " +  Utilities.formatString("long", Long.toHexString(e_magic & 0xFFFFFFFFL).toUpperCase()) + "\n");
+       str.append("e_class " + "\t " +  Utilities.formatString("byte", Integer.toHexString(e_class & 0xFF ))+ "\n");
+       str.append("e_data " + "\t " + Utilities.formatString("byte", Integer.toHexString(e_data & 0xFF ))+ "\n");
+       str.append("e_idver " + "\t " + Utilities.formatString("byte", Integer.toHexString(e_idver & 0xFF))+ "\n");
+       str.append("e_type " + "\t " + Utilities.formatString("short",Integer.toHexString(e_type & 0xFFFF))+ "\n");
+       str.append("e_machine " + "\t " + Utilities.formatString("short",Integer.toHexString(e_machine & 0xFFFF))+ "\n");
+       str.append("e_version " + "\t " + Utilities.formatString("long",Long.toHexString(e_version & 0xFFFFFFFFL))+ "\n");
+       str.append("e_entry " + "\t " + Utilities.formatString("long",Long.toHexString(e_entry & 0xFFFFFFFFL))+ "\n");
+       str.append("e_phoff "+ "\t " + Utilities.formatString("long",Long.toHexString(e_phoff & 0xFFFFFFFFL))+ "\n");
+       str.append("e_shoff "+ "\t " + Utilities.formatString("long",Long.toHexString(e_shoff  & 0xFFFFFFFFL))+ "\n");
+       str.append("e_flags "+ "\t " + Utilities.formatString("long",Long.toHexString(e_flags & 0xFFFFFFFFL))+ "\n");
+       str.append("e_ehsize "+ "\t " + Utilities.formatString("short",Integer.toHexString(e_ehsize& 0xFFFF))+ "\n");
+       str.append("e_phentsize " + "\t " + Utilities.formatString("short",Integer.toHexString(e_phentsize& 0xFFFF))+ "\n");
+       str.append("e_phnum " + "\t " + Utilities.formatString("short",Integer.toHexString(e_phnum& 0xFFFF))+ "\n");
+       str.append("e_shentsize " + "\t " + Utilities.formatString("short",Integer.toHexString(e_shentsize& 0xFFFF))+ "\n");
+       str.append("e_shnum " + "\t " + Utilities.formatString("short",Integer.toHexString(e_shnum& 0xFFFF))+ "\n");
+       str.append("e_shstrndx "+ "\t " + Utilities.formatString("short",Integer.toHexString(e_shstrndx& 0xFFFF))+ "\n");
+       return str.toString();
+     }
   }
+  
   private static class Elf32_Shdr
   {
     private long sh_name;
@@ -160,13 +160,14 @@ class ElfHeader {
       
    
    }
+  static String ElfInfo;
   static void readHeader(String file) throws IOException
   {
     RandomAccessFile f = new RandomAccessFile (file, "r");
     /** Read the ELF header. */
     Elf32_Ehdr ehdr = new Elf32_Ehdr ();
     ehdr.read (f);
-    ehdr.printHeader();
+    ElfInfo = ehdr.toString();
     Elf32_Shdr shdr = new Elf32_Shdr();
     shdr.read(f);
     shdr.printSectionHeader();
@@ -177,8 +178,6 @@ class ElfHeader {
 	f.seek (ehdr.e_shoff + (i * ehdr.e_shentsize));
 	shdr.read (f);
         
-        		//i.position = header._shoff + (header._shentsize * n);
-			//Elf32_Shdr shdr = void; i.read(TA(shdr)); shdrs ~= shdr;
     }
     
   }
