@@ -1,0 +1,59 @@
+/*
+    This file is part of jpcsp.
+
+    Jpcsp is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Jpcsp is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Jpcsp.  If not, see <http://www.gnu.org/licenses/>.
+ */
+package jpcsp;
+
+
+public class Utilities {
+  public static String formatString(String type , String oldstring)
+  {
+    String newString="";
+    if(type.equals("byte"))
+    {
+      int length = oldstring.length();
+      int counter = length;
+      while(counter<=2)
+      {
+           newString = "0" + oldstring;
+           counter++;
+      }
+      
+      
+    }
+    if(type.equals("short"))
+    {
+      int length = oldstring.length();
+      int counter = length;   
+      while(counter<=5)
+      {
+           newString = "0" + oldstring;
+           counter++;
+      }
+        
+    }
+    if(type.equals("long"))
+    {
+      int length = oldstring.length();
+      int counter = length;   
+      while(counter<=8)
+      {
+           newString = "0" + oldstring;
+           counter++;
+      }
+    }
+    return newString;
+  }
+}
